# SPQSP_PDAC

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.test  InitializationHCC.txt  Makefile  README.md  temp.md
.claude/: settings.local.json
.github/workflows/: build-and-test.yml  build-check.yml  build-test-image.yml  gpu-tests.yml
PDAC/abm/: derived_params.inc  gpu_param.cu  gpu_param.h
PDAC/agents/: b_cell.cuh  cancer_cell.cuh  dendritic_cell.cuh  fibroblast.cuh  macrophage.cuh  mdsc.cuh  pack_for_export.cuh  t_cell.cuh  t_reg.cuh  vascular_cell.cuh
PDAC/codegen/: abm_param_codegen.py  bootstrap_abm_xml.py  check_sync.py  qsp_codegen.py  reexport_sbml.sh  refresh_param_xml.py  sync_checks.py
PDAC/core/: common.cuh  layer_timing.h  model_functions.cu
PDAC/init/: ductal_init.cu  ductal_init.cuh  initialization.cu  initialization.cuh
PDAC/pde/: pde_integration.cu  pde_integration.cuh  pde_integration_old.cu  pde_solver.cu  pde_solver.cuh  pde_solver_old.cu
PDAC/qsp/: LymphCentral_wrapper.cpp  LymphCentral_wrapper.h  PDAC_model.sbml  qsp_integration.cu
PDAC/qsp/cvode/: CVODEBase.cpp  CVODEBase.h
PDAC/qsp/ode/: ODE_system.cpp  ODE_system.h  QSPParam.cpp  QSPParam.h  QSP_enum.h  qsp_params_xml_snippet.xml
PDAC/qsp/sim/: CMakeLists.txt  profile_jacobian.cpp  qsp_sim.cpp
PDAC/sim/: CMakeLists.txt  IO_OPTIMIZATION.md  Makefile  analyze_benchmark.py  benchmark_io.sh  build.sh  cluster.conf.example  evolve_to_diagnosis.cpp  evolve_to_diagnosis.h  initialization.cu  initialization.cuh  main.cu  model_definition.cu  model_layers.cu  pyproject.toml  set_healthy_populations.cpp  set_healthy_populations.h  setup_deps.sh  submit.sh  submit_debug.sh
PDAC/sim/outputs/abm/: agents_step_000000.csv  agents_step_000001.csv  agents_step_000002.csv  agents_step_000003.csv  agents_step_000004.csv  agents_step_000005.csv  agents_step_000006.csv  agents_step_000007.csv  agents_step_000008.csv  agents_step_000009.csv  agents_step_000010.csv  agents_step_000011.csv  agents_step_000012.csv  agents_step_000013.csv  agents_step_000014.csv  agents_step_000015.csv  agents_step_000016.csv  agents_step_000017.csv  agents_step_000018.csv  agents_step_000019.csv  agents_step_000020.csv  agents_step_000021.csv  agents_step_000022.csv  agents_step_000023.csv  agents_step_000024.csv  agents_step_000025.csv  agents_step_000026.csv  agents_step_000027.csv  agents_step_000028.csv  agents_step_000029.csv  agents_step_000030.csv  agents_step_000031.csv  agents_step_000032.csv  agents_step_000033.csv  agents_step_000034.csv  agents_step_000035.csv  agents_step_000036.csv  agents_step_000037.csv  agents_step_000038.csv  agents_step_000039.csv  (+6 more)
PDAC/sim/resource/: drug_metadata.yaml  healthy_state.yaml  param_all.xml  param_all_test.xml  param_baseline_movement.xml  temp_QSP_params.xml
PDAC/sim/tests/: NEXT_SESSION_evolve_to_diagnosis.md  NOTES_ode_vs_matlab.md  conftest.py  export_matlab_trajectories.m  test_build.py  test_io.py  test_ode_vs_matlab.py  test_simulation.py  yaml_read.m
PDAC/sim/tests/ode_compile/: CMakeLists.txt  dump_trajectories.cpp
PDAC/sim/tests/scenarios/: nivo_single_day7.yaml
PDAC/test/: test_harness.cu  test_harness.cuh  test_main.cu
PDAC/test/scenarios/adhesion/: make_figures.py  test_adhesion.cu
PDAC/test/scenarios/bcell_lifecycle/: make_figures.py  test_bcell_lifecycle.cu
PDAC/test/scenarios/chemotaxis_cdf/: make_figures.py  test_chemotaxis_cdf.cu
PDAC/test/scenarios/contact_guidance/: make_figures.py  test_contact_guidance.cu
PDAC/test/scenarios/dc_priming/: make_figures.py  test_dc_priming.cu
PDAC/test/scenarios/ecm_density/: make_figures.py  test_ecm_density.cu
PDAC/test/scenarios/frc_transition/: make_figures.py  pass_summary.csv  test_frc_transition.cu
PDAC/test/scenarios/icaf_diff/: make_figures.py  pass_summary.csv  test_icaf_diff.cu
PDAC/tools/: __init__.py  entropy.py  funcn.py  io.py  viz.py
docs/: BiologicalDecisions.md  ENUM_DRIVEN_SUMMARY.md  ENUM_DRIVEN_VISUAL_GUIDE.md  GINKGO_INTEGRATION_GUIDE.md  GPU_PDE_SOLVER_RESEARCH.md  GPU_SOLVER_QUICKREF.md  GPU_SOLVER_RESEARCH_INDEX.md  OCC_GRID_WORK_NOTES.md  OptimizationTargets-3-2-26.md  PARAMETER_REFERENCE.md  PORTING_NOTES.md  QSP_ENUM_DRIVEN_APPROACH.md  QSP_ENUM_EXTRACTION_EXAMPLE.md  QSP_ENUM_INTEGRATION_EXAMPLE.md  QSP_PARAM_ENUM_GUIDE.md  README_GPU_RESEARCH.txt  VASCULATURE_PHASE1_RESULTS.md  VASCULATURE_RANDOM_INIT.md  XML_PARAMETER_IMPLEMENTATION.md  event.csv  init_timing.csv  memory_transfer_analysis.md  qsp.csv  timing.csv
docs/diagrams/: README.md  export_to_png.py  figure1_system_architecture.mmd  figure2_simulation_loop.mmd  figure3_flamegpu_model.mmd  figure4_pde_solver.mmd  figure4_stencil_visualization.py  figure5_pde_abm_coupling.mmd  figure6_device_memory.dot  figure7_cancer_cell_lifecycle.mmd
notes/: ode_coupling_options.md
python/: PDAC_outputs.ipynb  Timing.ipynb  analyze_layers.py  analyze_scaling.py  ccl2_early.py  compare_ccl2_spatial.py  compare_events.py  compare_hcc_pdac.py  compare_parameters.py  generate_architecture_figures.py  run_scaling_tests.sh
python/outputs/scaling/: scaling_summary.txt
tools/sbml_converter/: ast_translator.py  convert_sbml.py  dependency_sorter.py  name_mapper.py  requirements.txt  sbml_parser.py  unit_converter.py  unit_scale_annotator.py
tools/sbml_converter/generators/: ode_system_cpp_gen.py  ode_system_h_gen.py  param_xml_gen.py  qsp_enum_gen.py  qsp_param_cpp_gen.py  qsp_param_h_gen.py
tools/sbml_converter/tests/: compare_sbml_vs_live.m  compare_trajectories.py  conftest.py  export_matlab_ode23s.m  export_matlab_trajectories.m  export_sundials.m  extract_simbio_internal.m  extract_simbio_internal2.m  extract_solver_state.m  plot_trajectory_comparison.py  qualify_species_names.m  run_compile_test.sh  run_validation.sh  test_ast_translator.py  test_dependency_sort.py  test_end_to_end.py  test_name_mapper.py  test_parser.py  test_runtime_validation.py  test_unit_converter.py
tools/sbml_converter/tests/ode_compile_test/: CMakeLists.txt  diag_rhs.cpp  dump_trajectories.cpp  test_ode_standalone.cpp
(+107 files in other folders)
